src/objects/Deskcom__desk_oauth_service__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Subdomain, client credentials and pre-computed oauth service endpoints for the service requests.</description>
    <fields>
        <fullName>Deskcom__access_token_url__c</fullName>
        <label>Acess Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deskcom__client_key__c</fullName>
        <label>Your Desk Client Key</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deskcom__client_secret__c</fullName>
        <label>Your Desk Client Secret</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deskcom__request_token_url__c</fullName>
        <label>Request Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deskcom__subdomain__c</fullName>
        <inlineHelpText>https://gist.github.com/2888905</inlineHelpText>
        <label>Your Desk subdomain</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deskcom__user_authorization_url__c</fullName>
        <label>User Authorization URL</label>
        <type>Url</type>
    </fields>
    <label>Desk.com OAuth Service</label>
</CustomObject>